# version-checker

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  RELATED.md  RUN.md  build.xml  email_notify.j2  pyproject.toml  version-checker.toml
.agents/skills/version-checker-add-software/: SKILL.md
.agents/skills/version-checker-github-release-config/: SKILL.md
.ai/: index.md
.ai/architecture/: project-overview.md
.ai/style/: python-style.md
.ai/workflow/: add-software.md  development.md  github-release-config.md
.github/workflows/: ci.yml
app/: cli.py
app/commands/: combine.py  inspect.py  jbp.py  skopeo.py  sync.py
app/core/: __init__.py  config.py  github.py  http.py  notify.py  utils.py  version.py
app/inspect/: __init__.py  parser.py
app/link/: __init__.py  gradle.py  openssl.py  podman_machine_wsl_os.py  sqlite.py
app/links/: composer.py  github_desktop.py  gradle.py  openssl.py
app/parser/: __init__.py  almalinux.py  android_studio.py  apache_flume.py  chrome.py  codeberg.py  dart.py  docker_hub.py  docker_library.py  dotnet.py  dotnetfx.py  firefox.py  flutter.py  gh.py  gh_releases.py  github_desktop.py  gitlab.py  go.py  haproxy.py  index.py  jetbrains.py  jetbrains_plugin.py  navicat.py  nodejs.py  php.py  rockylinux.py  ruby.py  sonatype_nexus.py  sourceforge.py  sublime.py  tortoisegit.py  virtualbox.py  visualstudio.py  vmware.py  vscode.py  xshell.py
data/: 7-zip.json  AnotherRedisDesktopManager.json  AutoHotkey.json  CLIProxyAPI.json  ChatBox.json  Clash.Meta.json  ClashForAndroid.json  ClashMetaForAndroid.json  HEU_KMS_Activator.json  HeidiSQL.json  ImageMagick.json  JetBrains.AppCode.json  JetBrains.CLion.json  JetBrains.DataGrip.json  JetBrains.DataSpell.json  JetBrains.Goland.json  JetBrains.IntelliJIDEA.json  JetBrains.PhpStorm.json  JetBrains.PyCharm.json  JetBrains.ReSharperUltimate.json  JetBrains.Rider.json  JetBrains.RubyMine.json  JetBrains.TeamCity.json  JetBrains.WebStorm.json  MySQL2PG.json  Navicat.json  Nping.json  Office-Tool.json  PowerShell.json  Sarasa-Gothic.json  SpacetimeDB.json  SwitchHosts.json  TortoiseGit.json  TortoiseSVN.json  Windows.Terminal.json  ZeroOmega.json  aardvark-dns.json  ab-download-manager.json  act_runner.json  air.json  (+1043 more)
src/app/: cli.py
src/app/commands/: combine.py  inspect.py  jbp.py  skopeo.py
src/app/core/: __init__.py  click.py  config.py  github.py  http.py  inspect_result.py  notify.py  output.py  utils.py  version.py
src/app/link/: __init__.py  gradle.py  openssl.py  podman_machine_wsl_os.py  sqlite.py
src/app/parser/: __init__.py  almalinux.py  android_studio.py  apache_flume.py  chrome.py  codeberg.py  dart.py  docker_hub.py  dotnet.py  dotnetfx.py  firefox.py  flutter.py  gh.py  git_ls_remote.py  gitea.py  github_desktop.py  gitlab.py  go.py  haproxy.py  index.py  jetbrains.py  jetbrains_plugin.py  navicat.py  nodejs.py  php.py  registry.py  rockylinux.py  sf.py  sublime.py  virtualbox.py  xshell.py
tests/: base.py  bs4_test.py  cli_test.py  click_test.py  combine_test.py  command_extra_test.py  http_test.py  inspect_test.py  link_test.py  notify_test.py  output_dir_test.py  parser_offline_test.py  parser_registry_test.py  parser_test.py  regex_test.py  utils_test.py  version_helper_test.py  workflow_test.py
