[project]
name = "version-checker"
dynamic = ["version"]
description = ""
authors = [
    { name = "Lei.Lee", email = "codeplus@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp==3.12.4",
    "arrow>=1.3.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.0",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "retrying>=1.3.4",
    "rss-parser>=2.1.0",
    "semver>=3.0.4",
]

[project.scripts]
version-checker = "app.cli:start"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# from <https://hatch.pypa.io/latest/version/>
source = "vcs"
#path = "src/app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "hatchling>=1.27.0",
    "pytest>=8.3.5",
]
