[project]
name = "version-checker"
dynamic = ["version"]
description = ""
authors = [
    { name = "Lei.Lee", email = "codeplus@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.0",
    "arrow>=1.3.0",
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "feedparser>=6.0.12",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "retrying>=1.4.2",
    "semver>=3.0.4",
]

[project.scripts]
version-checker = "app.cli:start"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# from <https://hatch.pypa.io/latest/version/>
source = "vcs"
#path = "src/app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
    "pytest>=8.4.2",
]
