[project]
name = "version-checker"
dynamic = ["version"]
description = ""
authors = [
    { name = "Lei.Lee", email = "codeplus@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "arrow>=1.4.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "feedparser>=6.0.12",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "retrying>=1.4.2",
    "semver>=3.0.4",
]

[project.scripts]
version-checker = "app.cli:start"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# from <https://hatch.pypa.io/latest/version/>
source = "vcs"
#path = "src/app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py314"
line-length = 140
exclude = [
    ".git",
    ".venv",
    "build",
    "data",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
line-ending = "native"
